2006-02-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove HAVE_PANGO_16

	* lily/tuplet-bracket.cc (calc_positions): multiply with
	staff-space for beam case. This fixes tuplets+beams on scaled
	staves.

	* config.hh.in: remove all Kpathsea related defines.

	* lily/dot-column.cc (side_position): reach stem via dots->
	head->stem. Inspect all stems for dot collisions. 

	* lily/dot-column-engraver.cc (class Dot_column_engraver): excise
	stem handling.

	* lily/bar-number-engraver.cc (process_music): document function
	of whichBar.

	* lily/score.cc (default_rendering): add pscore, not systems
	themselves.

	* lily/paper-book.cc (get_system_specs): separate generation of
	titles and systems.

	* flower/include/std-vector.hh: don't include config.hh

2006-02-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh: Better wrapper compatibility with
	std::vector.

	* flower/include/flower-proto.hh: Remove cheap forward declaration
	attempts.

	* stepmake/aclocal.m4 (STEPMAKE_STL_DATA_METHOD): Bugfix.

2006-02-14  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/invoking.itely: add warning about command line.

2006-02-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-proto.hh: add Prob, rm Page.

	* flower/include/std-vector.hh (VPOS): use 64 bit-proof version.

	* VERSION: release 2.7.34

	* lily/relocate.cc (framework_relocation): show canary if
	GHOSTSCRIPT_VERSION undefined.

	* GNUmakefile.in: remove $(VERSION) symlink.

	* lily/relocate.cc (setup_paths): add + 

2006-02-13  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: specify sizes for all big HTML pages.

2006-02-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove @FRAMEWORKDIR@

	* lily/system-start-text.cc (get_stencil): new file: separate out
	system-start-delimiter text support.

	* input/**ly: replace \context with \new where appropriate.
	
	* THANKS: add Don.

	* lily/slur-scoring.cc (get_base_attachments): use