@@ -14,6 +14,7 @@ CONTRIBUTORS
 
 Bruce Fairchild
 Cameron Horsburgh
+Erlend Aasland
 Heikki Junes
 Joe Neeman
 Johannes Schindelin
@@ -60,7 +61,6 @@ Donald Axel
 Don Blaheta
 Edward Neeman
 Eduardo Vieira
-Erlend Aasland
 Ernesto Gancedo
 Frédéric Bron
 Hans Forbrich
