@@ -34,6 +34,9 @@
 (define-public (format-mark-box-alphabet mark context)
   (make-bold-markup (make-box-markup (make-markalphabet-markup (1- mark)))))
 
+(define-public (format-mark-circle-alphabet mark context)
+  (make-bold-markup (make-circle-markup (make-markalphabet-markup (1- mark)))))
+
 (define-public (format-mark-letters mark context)
   (make-bold-markup (make-markletter-markup (1- mark))))
 
@@ -46,11 +49,21 @@
 (define-public (format-mark-box-letters mark context)
   (make-bold-markup (make-box-markup (make-markletter-markup (1- mark)))))
 
+(define-public (format-mark-circle-letters mark context)
+  (make-bold-markup (make-circle-markup (make-markletter-markup (1- mark)))))
+
 (define-public (format-mark-box-numbers mark context)
   (make-bold-markup (make-box-markup (number->string mark))))
 
+(define-public (format-mark-circle-numbers mark context)
+  (make-bold-markup (make-circle-markup (number->string mark))))
+
 (define-public (format-mark-box-barnumbers mark context)
   (make-bold-markup (make-box-markup
+    (number->string (ly:context-property context 'currentBarNumber)))))
+
+(define-public (format-mark-circle-barnumbers mark context)
+  (make-bold-markup (make-circle-markup
     (number->string (ly:context-property context 'currentBarNumber)))))
 
 
